fix horizontal scroll

--- a/css/gzhel.css
+++ b/css/gzhel.css
@@ -1294,8 +1294,8 @@ footer.home {
 
 .article-data-container {
   position: absolute;
-  top: -0.5rem;
-  left: -0.3rem;
+  left: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
   font-family: 'balkara', serif;
